# CMakeList.txt : CMake project for CraftingInterpreters, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.10)
project ("CraftingInterpreters")

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

# GoogleTest requires at least C++14
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


include_directories(src)

add_subdirectory(src)
add_subdirectory(tst)
add_subdirectory(tool)
add_subdirectory(lib/googletest)


